welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:1: error: Missing closing brace `}' assumed here
def alarmClock(day:Int, vacation:Boolean): String = {
^